--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -695,24 +695,24 @@
  PROV_ADJ4937:0 "ラウ"
  PROV4938:0 "バヌアレブ"
  PROV_ADJ4938:0 "バヌアレブ"
- PROV4939:0 "テ・モアナートイ"
- PROV_ADJ4939:0 "テ・モアナートイ"
+ PROV4939:1 "Te Urewera"
+ PROV_ADJ4939:1 "Te Urewera"
  MAA:0 "ンガティ・アワ"
- MAA_ADJ:0 "ンガティ・アワ"
+ MAA_ADJ:1 "Ngati Awa"
  TAN:0 "タイヌイ"
- TAN_ADJ:0 "タイヌイ"
- TAK:0 "タキティム"
- TAK_ADJ:0 "タキティム"
- TNK:0 "タラナキ"
- TNK_ADJ:0 "タラナキ"
- TEA:0 "テ・アラワ"
- TEA_ADJ:0 "テ・アラワ"
+ TAN_ADJ:1 "Tainui"
+ TAK:1 "Ngati Kahungunu"
+ TAK_ADJ:1 "Ngati Kahungunu"
+ TNK:1 "Ngati Toa"
+ TNK_ADJ:1 "Ngati Toa"
+ TEA:1 "Ngati Ranginui"
+ TEA_ADJ:1 "Ngati Ranginui"
  TTT:0 "ンガプヒ"
- TTT_ADJ:0 "ンガプヒ"
+ TTT_ADJ:1 "Ngapuhi"
  WAI:0 "ワイタハ"
- WAI_ADJ:0 "ワイタハ"
+ WAI_ADJ:1 "Waitaha"
  AOT:0 "アオテアロア"
- AOT_ADJ:0 "アオテアロア"
+ AOT_ADJ:2 "Aotearoa"
  HAW:0 "ハワイ"
  HAW_ADJ:0 "ハワイ"
  MAU:0 "マウイ"
@@ -737,9 +737,9 @@
  VIT_ADJ:0 "ビティ"
  maori:0 "マオリ"
  polynesian_tribe:0 "ポリネシア部族"
- polynesian_tribe_desc:0 "This is the form of government of the tribes in Polynesia."
+ polynesian_tribe_desc:1 "A Polynesian Tribe is the form of government where a leader manages to hold authority over a tribe or group of tribes but the nation does not act as a unified one."
  polynesian_kingdom:0 "ポリネシア王国"
- polynesian_kingdom_desc:0 "ポリネシア王国は部族が君主の下に結束し、部族による統治が行われている政治体制である。"
+ polynesian_kingdom_desc:1 "A Polynesian Kingdom is the form of government where a polynesian monarch manages to unite the usually compiting tribes under their rule and act as a united nation."
  polynesian_tech:0 "ポリネシア"
  polynesian_tech_desc:1 "ポリネシア技術グループでは、技術レベルが100%高め（200%）です。"
  pacific_spearman:1 "ポリネシア槍兵"
@@ -847,14 +847,14 @@
  samoa_faavae_desc:0 "自民族の宗教的慣習は教義と宗派で千差万別であるが、全員が「サモアは神の上に建国された」という言葉に制約されている。どの宗教を実践しているかは問題ではない、なぜなら、全ての神々の中で神聖なのはサモアそのものだからだ。日曜日は全サモア人にとって大いなる安息日であり、自分が選んだ方法で各自の神々を崇拝し、家族と時間を過ごす。どんな信仰に従うかは問題ではない。なぜならファア・サモアは全てを受け入れているからだ。"
  samoa_trade:0 "ポリネシアン・トライアングルの交易"
  samoa_trade_desc:0 "サモアの交易商は何年もの間、ポリネシアン・トライアングル、つまり、主に緊密な隣国であるフィジーとトンガとの交易に従事してきた。。多くの社会では、このような広大な海を越えての交易という概念は単に捨て去るのだろうが、自国の航海者や交易商は、他の誰よりも波についてよく理解している。自国の大きさにかかわらず、サモアに富をもたらした航海技術を忘れてはならないし、おそらく、いつかサモアが世界中の豊かな交易品を手にするだろう..."
- estate_kahuna:0 "カフナ"
- estate_tohunga:0 "トフンガ"
- estate_bete:0 "ベテ"
- estate_taula_otua:0 "タウラ・オトゥア"
- estate_taula_aitu:0 "タウラ・アイトゥ"
- estate_alii:0 "アリイ"
- estate_eiki:0 "エイキ"
- estate_ratu:0 "ラトゥ"
+ estate_kahuna:1 "カフナ"
+ estate_tohunga:1 "トフンガ"
+ estate_bete:1 "ベテ"
+ estate_taula_otua:1 "タウラ・オトゥア"
+ estate_taula_aitu:1 "タウラ・アイトゥ"
+ estate_alii:1 "アリイ"
+ estate_eiki:1 "エイキ"
+ estate_ratu:1 "ラトゥ"
  iroquoian_federation_ideas:0 "イロコイ連邦のアイデア"
  iroquoian_federation_ideas_start:0 "イロコイ連邦の伝統"
  iroquoian_federation_ideas_bonus:0 "イロコイ連邦の野望"
@@ -965,7 +965,7 @@
  unite_fiji_desc:0 "The clans are one once more and we can claim the title of ruler of Fiji."
  polynesian_navy_build_title:0 "オセアニア人"
  polynesian_navy_build_desc:0 "No matter what the Polynesian people call home, one thing they all have in common is a spiritual connection with the sea. Sailing is often seen as a sacred tradition, and in some societies the sailor's canoe is seen as an extension of his own body, and in even more extreme cases the canoe is seen to have Mana or a soul of its own and is sovereign and sacred among all things."
- polynesian_grand_navy_title:0 "Polynesian Triangle"
+ polynesian_grand_navy_title:1 "Polynesian Triangle"
  polynesian_grand_navy_desc:0 "The Polynesian Triangle refers to the area of the Pacific Ocean inhabited by the Polynesians. The tips of the triangle refers to Hawaii, the west corner to Aotearoa, and the east corner to Rapa Nui. Polynesian traders and voyagers alike would utilize the Polynesian Triangle to engage in trade, exploration, and colonisation. The native Polynesians would actually refer to this region as an octopus, representing the various invisible pathways that navigators would follow along the sea. This octopus has various names in Polynesian societies including Taumata-Fe'e-Fa'atupu-Hau or Grand Octopus of Prosperity referring to the great riches that exploration and trade would bring to their society."
  gain_mana_title:0 "マナを得よ"
  gain_mana_desc:0 "Mana is roughly equivalent to the Western expression of a soul or spirit. But, Mana is also the measure of a man's prestige and piety, and an honourable man is seen as possessing a lot of Mana while a lesser member of society is seen as being shallow in Mana. In some societies, someone who is dedicated to prayer and the accumulation of Mana can gain the favour of the gods and request them to perform tasks such as changing the weather or bringing islands out of the ocean. It's from this that the west's mistake of equating Mana with Magic has come from."
@@ -1415,7 +1415,6 @@
  crown_colony_government_desc:0 "A Crown Colony is a colony type that is directly controlled by the metropolis."
  private_enterprise_colony_government:0 "Private Enterprise Colony"
  private_enterprise_colony_government_desc:0 "A colony run as a Private Enterprise focuses on extracting resources from a colony and bringing it back home."
- self_governing_colony_government_government:0 "Self-Governing Colony"
  self_governing_colony_government_desc:0 "A type of colony that is autonomous, a Self Governing Colony acts as a country inside a country."
  custom_idea_possible_disengagement_chance:0 "Naval Disengagement Chance"
  custom_idea_possible_disengagement_chance_desc:0 "By training our ships, we will be able to avoid unnecessary losses in the sea when engaging other navies."
@@ -1582,10 +1581,12 @@
  ancestor_navigator_personality_die_desc:0 "[Root.Monarch.GetHerHisCap] enthusiasm for the sea has left us with a stronger navy."
  ancestor_fierce_negotiator_personality_die_desc:0 "[Root.Monarch.GetHerHisCap] harsh bargaining has left mercenary leaders destitute throughout our lands."
  PUSH_BACK_COLONIZERS:0 "$ORDER$$FIRST$-$SECOND$ war against the invaders"
- kaitiakitanga:0 "カイティアキタンガ"
- kaitiakitanga_desc:1 "カイティアキタンガとは、全てのマオリ族が空、海、大地に対して負う神聖なる守護権のことだ。この伝統を実践している者は、カイティアキ、つまり守護者であり、我々を取り囲むマナの無生の力を守る神聖な守護者であるが、自分自身を守ることはできない。聖地の冒涜はマオリ社会では殺人に値すると考えられており、河川を汚染したり、森林を伐採したり、天然資源を過度に略奪したりするといった悪事は、測り知れない罪とみなされる。環境と調和して生活し、どれだけ自然を侵害するかを自身で制限することのみが、神を喜ばせ、マナと豊かに成長する唯一の方法である。"
+ kaitiakitanga:0 "Kaitiakitanga"
+ kaitiakitanga_desc:1 "Kaikiatitanga is the sacred guardianship that all Maori owe to the sky, the sea, and the land. One who practices this tradition is Kaitiaki or guardian and is a sacred guardian who defends the inanimate forces of Mana that surround us but are incapable of defending themselves. To desecrate a holy site is considered equivalent to murder in Maori society, so harmful acts such as polluting a river, chopping down a forest, or excessively plundering natural resources are considered sin without measure. It is only by living in harmony with our environment and restricting ourselves on how much we encroach on nature is the only way to please the Gods and grow rich with Mana."
  estate_rangatira:0 "ランガティアラ"
  monumental_pride:0 "Monumental Pride"
  desc_monumental_pride:0 "The construction of one of our nation's greatest monuments fills the hearts of our people with pride to be part of our realm!"
  monument_church_of_the_people:0 "Church of the People"
  desc_monument_church_of_the_people:0 "From the lowly peasant to the highest of the clerics, everyone of our [Root.Government.GetName] is welcome in Saint Peter's Basilica."
+ self_governing_colony_government:0 "Self-Governing Colony"
+ guru_teaching:0 "Guru Teachings"
