--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -3,7 +3,7 @@
  CENTRALIZE_STATE_DESC:2 "§YCentralize State§!\nSpend $COST|Y$ of government progress to centralize the $STATE|Y$ in the most developed province, reducing it's governing cost by $REDUCTION|0Y$. It will take $YEARS|0Y$ years."
  CENTRALIZE_STATE_COST:0 "十分な政府改革進捗度がありません"
  CENTRALIZE_STATE_TERRITORY:0 "集権化はテリトリーではなく、ステートにのみ行えます。"
- CENTRALIZE_STATE_DEV:0 "$PROVINCE$の統治コストは$PROVINCE_DEV|0$以上でなくてはなりません"
+ CENTRALIZE_STATE_DEV:1 "Governing cost of $STATE$ must be $STATE_DEV|0$ development, or higher"
  CENTRALIZE_STATE_PROVINCES:0 "ステートの全域を領有していません。"
  CENTRALIZE_STATE_DONE:0 "既にステートの集権化を行っています"
  CENTRALIZE_STATE_PROGRESS:0 "建設は既に進行中です。$DATE$に完了するでしょう。"
@@ -26,9 +26,10 @@
  CENTRALIZE_STATE_CANCEL_SETUP:0 "When centralize state construction is removed due to owner change."
  CENTRALIZE_STATE_CANCEL_1:0 "Centralize state construction removed"
  CENTRALIZE_STATE_CANCEL_2:0 "The construction in $PROVINCE$ has been removed."
- CENTRALIZE_STATE_CANCEL_3:0 "You don't own all provinces in $STATE$."
+ CENTRALIZE_STATE_CANCEL_3:1 "You don't own all provinces in the state."
  CENTRALIZE_STATE_CANCEL_LOG:0 "Centralize state construction has been removed in $PROVINCE$."
  CENTRALIZE_STATE_CANCEL_BTN1:0 "OK"
  CONFIRMABANDONSTATECENTRALIZED:0 "$STATE$ will no longer be a centralized state."
  INFLACTION_REDUCTION:0 "Inflaction reduction is modified by:\n"
  MODIFIER_STATE_GOVERNING_INCREASE_COST:0 "State Governing Increase Cost"
+ CENTRALIZE_STATE_CAPITAL:0 "You can't centralize your capital state"
