--- a/source/localisation/north_america_redone_l_english.yml
+++ b/source/localisation/north_america_redone_l_english.yml
@@ -263,7 +263,7 @@
  southern_illinois_area:0 "イリノイ南部"
  iowa_area:0 "アイオワ"
  kansas_area:0 "カンザス"
- minnessota_area:0 "Minnessota"
+ minnessota_area:0 "Minnesota"
  texas_plains_area:0 "Texas Plains"
  st_john_valley_area:0 "St John's Valley"
  trois_rivieres_area:0 "トロワ・リヴィエール"
