--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -1082,9 +1082,9 @@
  PROV1103:0 "イル・ブルボン"
  PROV1104:0 "エイリークスフィヨルド"
  PROV1105:0 "ヴェストリビュッグズ"
- PROV1106:0 "ファンガレイ"
+ PROV1106:1 "Te Tai Tokerau"
  PROV1107:0 "タラナキ"
- PROV1108:0 "タウランガ"
+ PROV1108:1 "Te Moana a Toi"
  PROV1109:0 "ティマル"
  PROV1110:0 "アガディール"
  PROV1111:0 "アルギン"
@@ -1222,7 +1222,7 @@
  PROV1243:0 "サモア"
  PROV1244:0 "トゥアモトゥ諸島"
  PROV1245:0 "マノクワリ"
- PROV1246:0 "ワイホパイ"
+ PROV1246:1 "Ata Whenua"
  PROV1247:0 "コルシカ"
  PROV1248:0 "モルディブ"
  PROV1249:0 "ヨラ"
@@ -2666,7 +2666,7 @@
  PROV2702:0 "ブトゥアン"
  PROV2703:0 "ラハダトゥ"
  PROV2704:0 "シブ"
- PROV2705:0 "シンガラン"
+ PROV2705:1 "シンガラン"
  PROV2706:0 "カタパン"
  PROV2707:0 "バリト"
  PROV2708:0 "サンピット"
@@ -2698,9 +2698,9 @@
  PROV2734:0 "ユイン"
  PROV2735:0 "ガンジーママラ"
  PROV2736:0 "ヌクヌ"
- PROV2737:0 "アフリリ"
- PROV2738:0 "ワイタハ"
- PROV2739:0 "キリキリロア"
+ PROV2737:1 "Wairarapa"
+ PROV2738:1 "Te Tau Ihu"
+ PROV2739:1 "Waikato"
  PROV2740:0 "ボルネオ"
  PROV2741:0 "済州"
  PROV2742:0 "六鎮"
