--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -514,7 +514,7 @@
  REDUCE_OPINION_FAVOR_REQDES1:0 "$ACTOR|Y$ asks a favor that we reduce our opinion of $THEM|Y$.\nThis will cause our opinion of $THEM|Y$ to be lowered by $OPINION$."
  SELECT_COUNTRY_TO_REDUCE_RELATIONS_WITH:0 "Please select a Country for them to reduce their opinion of."
  BREAKALLIANCE_NOTHING_SELECTED_DESC:0 "Choose the Country that we want $THEM|Y$ to break their alliance with."
- WE_TRADE_FAVORS_FOR_GOLD_TITLE:0 "Trade Favors For Ducats"
+ WE_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度で引き換え"
  WE_TRADE_FAVORS_FOR_GOLD_SETUP:0 "When we ask a country to give us some cash as a Favor."
  WE_TRADE_FAVORS_FOR_GOLD_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_GOLD_1:0 "Traded Favors For Ducats"
@@ -525,7 +525,7 @@
  WE_TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_GOLD_BTN3:0 "Go to"
- TRADE_FAVORS_FOR_GOLD_TITLE:0 "Trade Favors For Ducats"
+ TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度で引き換え"
  TRADE_FAVORS_FOR_GOLD_SETUP:0 "When a Country asks us for cash as a favor."
  TRADE_FAVORS_FOR_GOLD_HEADER:0 "Herald from"
  TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
@@ -537,7 +537,7 @@
  TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
  TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  TRADE_FAVORS_FOR_GOLD_BTN3:0 "Go to"
- OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "Trade Favors For Ducats"
+ OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度で引き換え"
  OTHER_TRADE_FAVORS_FOR_GOLD_SETUP:0 "When a Country asks a nation for cash as a favor."
  OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 "Herald from"
  OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
@@ -568,7 +568,7 @@
  TRADE_FAVORS_FOR_GOLD_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them for cash."
  TRADE_FAVORS_FOR_GOLD_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $MONTHS$ month's income ($CASH|Y$¤)."
  TRADE_FAVORS_FOR_GOLD_DESC:0 "We will ask that $RECIPIENT|Y$ give us $MONTHS$ month's income ($CASH|Y$¤) in exchange for $FAVOR|Y$ Favors."
- WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "Trade Favors For Soldiers"
+ WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度で引き換え"
  WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "When we ask a country to give us some manpower as a Favor."
  WE_TRADE_FAVORS_FOR_MEN_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_MEN_1:0 "Traded Favors For Soldiers"
@@ -579,7 +579,7 @@
  WE_TRADE_FAVORS_FOR_MEN_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_MEN_BTN3:0 "Go to"
- TRADE_FAVORS_FOR_MEN_TITLE:0 "Trade Favors For Soldiers"
+ TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度で引き換え"
  TRADE_FAVORS_FOR_MEN_SETUP:0 "When a Country asks us for Soldiers as a favor."
  TRADE_FAVORS_FOR_MEN_HEADER:0 "Herald from"
  TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
@@ -591,7 +591,7 @@
  TRADE_FAVORS_FOR_MEN_BTN1:0 "OK"
  TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  TRADE_FAVORS_FOR_MEN_BTN3:0 "Go to"
- OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "Trade Favors For Soldiers"
+ OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度で引き換え"
  OTHER_TRADE_FAVORS_FOR_MEN_SETUP:0 "When a Country asks a nation for Soldiers as a favor."
  OTHER_TRADE_FAVORS_FOR_MEN_HEADER:0 "Herald from"
  OTHER_TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
@@ -620,7 +620,7 @@
  TRADE_FAVORS_FOR_MEN_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them for Soldiers."
  TRADE_FAVORS_FOR_MEN_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for $MONTHS$ months' supply ($MEN|Y$) of Soldiers."
  TRADE_FAVORS_FOR_MEN_DESC:0 "We will ask that $RECIPIENT|Y$ give us $MONTHS$ months' supply ($MEN|Y$) of Soldiers in exchange for $FAVOR|Y$ Favors."
- WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "Trade Favors For Sailors"
+ WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度で引き換え"
  WE_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "When we ask a country to give us some Sailors as a Favor."
  WE_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_SAILORS_1:0 "Traded Favors For Sailors"
@@ -631,7 +631,7 @@
  WE_TRADE_FAVORS_FOR_SAILORS_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_SAILORS_BTN3:0 "Go to"
- TRADE_FAVORS_FOR_SAILORS_TITLE:0 "Trade Favors For Sailors"
+ TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度で引き換え"
  TRADE_FAVORS_FOR_SAILORS_SETUP:0 "When a Country asks us for Sailors as a favor."
  TRADE_FAVORS_FOR_SAILORS_HEADER:0 "Herald from"
  TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
@@ -643,7 +643,7 @@
  TRADE_FAVORS_FOR_SAILORS_BTN1:0 "OK"
  TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  TRADE_FAVORS_FOR_SAILORS_BTN3:0 "Go to"
- OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "Trade Favors For Sailors"
+ OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度で引き換え"
  OTHER_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "When a Country asks a nation for Sailors as a favor."
  OTHER_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "Herald from"
  OTHER_TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
@@ -731,7 +731,7 @@
  TRADE_FAVORS_FOR_HEIR_DESC:1 "We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors. This will create a truce between the countries and cause $AE|R$ Aggressive Expansion in countries of the same religion."
  X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$ is a subject of $OVERLORD|Y$."
  DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
- WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "Trade Favors For Trust"
+ WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度で引き換え"
  WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "When we ask a country to increase their trust in us as a Favor."
  WE_TRADE_FAVORS_FOR_TRUST_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_TRUST_1:0 "Traded Favors For Trust"
@@ -742,7 +742,7 @@
  WE_TRADE_FAVORS_FOR_TRUST_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_TRUST_BTN3:0 "Go to"
- TRADE_FAVORS_FOR_TRUST_TITLE:0 "Trade Favors For Trust"
+ TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度で引き換え"
  TRADE_FAVORS_FOR_TRUST_SETUP:0 "When a Country asks us for Trust in exchange for favors."
  TRADE_FAVORS_FOR_TRUST_HEADER:0 "Herald from"
  TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
@@ -754,7 +754,7 @@
  TRADE_FAVORS_FOR_TRUST_BTN1:0 "OK"
  TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  TRADE_FAVORS_FOR_TRUST_BTN3:0 "Go to"
- OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "Trade Favors For Trust"
+ OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度で引き換え"
  OTHER_TRADE_FAVORS_FOR_TRUST_SETUP:0 "When a Country asks a nation for Trust as a favor."
  OTHER_TRADE_FAVORS_FOR_TRUST_HEADER:0 "Herald from"
  OTHER_TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
@@ -920,11 +920,11 @@
  ESTATE_AGENDA_TASK_FAIL_CRITERIA:0 "Will fail if the following is fullfilled:\n$CONDITIONS$\n\n"
  CLOSE_MACROBUILDER_TO_USE:0 "You cannot access custom map modes while the macrobuilder is open. Close the macrobuilder to re-enable these."
  KNOWLEDGE_SHARING_ECOVIEW:0 "知識共有"
- TRADE_FAVORS_FOR_GOLD_DIPLO_ACTION:0 "Trade Favors For Ducats"
- TRADE_FAVORS_FOR_MEN_DIPLO_ACTION:0 "Trade Favors For Soldiers"
- TRADE_FAVORS_FOR_SAILORS_DIPLO_ACTION:0 "Trade Favors For Sailors"
+ TRADE_FAVORS_FOR_GOLD_DIPLO_ACTION:0 "ダカットを好感度で引き換え"
+ TRADE_FAVORS_FOR_MEN_DIPLO_ACTION:0 "人的資源を好感度で引き換え"
+ TRADE_FAVORS_FOR_SAILORS_DIPLO_ACTION:0 "水兵を好感度で引き換え"
  TRADE_FAVORS_FOR_HEIR_DIPLO_ACTION:0 "Request Relative as Heir"
- TRADE_FAVORS_FOR_TRUST_DIPLO_ACTION:0 "Trade Favors For Trust"
+ TRADE_FAVORS_FOR_TRUST_DIPLO_ACTION:0 "信頼を好感度で引き換え"
  TRADE_FAVORS_FOR_WAR_PREP_DIPLO_ACTION:0 "Ask to prepare for War"
  MERCENARY_MANPOWER_TOOLTIP:0 "Manpower Reinforcement Speed: $AMOUNT|Y$ per month"
  regent_female:0 "Regent"
@@ -1030,4 +1030,9 @@
  DIPLO_LOW_SAILORS:0 "$WHO$ has low Sailors: "
  DIPLO_RELATIVE_OPINION:0 "$WHO$ relative opinion of $COUNTRY01$ and $COUNTRY02$: "
  ENFORCE_PEACE_CANNOT_LEAGUE_WAR:0 "You cannot enforce peace in a Religious League War."
- CANNOT_MOVE_ALREADY_IN_PROGRESS: "The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$"
+ CANNOT_MOVE_ALREADY_IN_PROGRESS:0 "The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$"
+ CANNOT_EXTEND_REGENCY_TOO_FAR_IN_FUTURE:0 "The Regency doesn't end until $DATE$, wait until there's less than a year to go."
+ HAS_REFORM_ON_LEVEL:0 "Has a level $LEVEL|Y$ Government Reform.\n"
+ HAS_NOT_REFORM_ON_LEVEL:0 "Has a level $LEVEL|Y$ Government Reform.\n"
+ CURRENT_GURU_IS:0 "Current Guru is "
+ CURRENT_GURU_IS_NOT:0 "Current Guru is NOT "
