--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1914,39 +1914,39 @@
  native_reductions_tooltip:0 "§Y北アメリカ§!と§Y南アメリカ§!で修道会が割り当てられたステートを§Y15§!つ、§Y[Root.GetName]§!かその従属国が領有する。"
  por_japan_mission_tooltip:0 "[Root.GetName]が§Y肥前§!の支配者と良好な関係の場合、イベント「§Y長崎のポルトガル人§!」が発生します。\nそうでない場合は、§G3.00§!の重商主義を獲得します。"
  new_world_modernization_tag_title:0 "新世界の近代化"
- new_world_modernization_tag_desc:0 "European colonialism threatens to wipe out our nation if we do not adapt rapidly. We must have the technology and state apparatus to challenge them."
+ new_world_modernization_tag_desc:0 "ヨーロッパの植民地主義に対して迅速に適応しなければ、自国滅亡の危機である。彼らに挑むための技術と国家機構を持たなければならない。"
  reform_religion_title:0 "宗教の改革"
- reform_religion_desc:0 "Religion is a central part of our culture, but it is also the root of many of our problems. The answer, obviously, is not to get rid of it, but to reform it instead."
+ reform_religion_desc:0 "宗教は自国の文化の中心であるが、また、多くの問題の根源でもある。それに対する答えは明らかで、宗教をなくすことではなく、宗教を改革することだ。"
  native_income_mission_title:0 "高い収入"
- native_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ native_income_mission_desc:0 "我々は必要なあらゆる手段を用いて国家の収入を増やす必要がある。政府の日々の支出から敵を侵略する軍隊の維持まで、国家のあらゆる努力のために、金が必要である。"
  native_dominate_home_trade_node_title:0 "交易の支配"
- native_dominate_home_trade_node_desc:0 "Our merchant communities have been growing stronger and stronger for a long time now. It is time we give them the help they require to truly dominate our domestic trade. No foreign power must be allowed to influence the well being of our subjects."
+ native_dominate_home_trade_node_desc:0 "我々の商人社会は、長きにわたり、より強く成長してきた。我々は国内交易を真に支配するため必要な支援を彼らに与える時だ。外国人の力が、我々の国民の幸福に影響を与えることを許すべきではない。"
  native_dev_capital_title:0 "首都の改善"
- native_dev_capital_desc:0 "The core of our nation needs to be strong so that other nations look at us in awe. We must develop it."
+ native_dev_capital_desc:0 "他国から畏敬の念を抱かれるためには、国家の中枢部は強靭さが必要となる。それを発展させねばならない。"
  native_treasury_title:0 "国庫の拡大"
- native_treasury_desc:0 "A large treasury is an imperative buffer for all things that could befall us through. If this is seen as miserly, it is because some do not realize that this vice is the very essence of what it means to reign."
+ native_treasury_desc:0 "大規模な国庫は、我々を通じて起こる可能性のあるすべてのもののための不可欠な緩衝物である。これが欲深いと見なされるのは、この悪徳が統治の本質であることを理解していない人がいるためだ。"
  native_imperial_ambition_mission_title:0 "帝国の征服"
- native_imperial_ambition_mission_desc:0 "Securing wealth must always be the foremost priority of our state. Let us make use of the expensive armies and fleets that our economic prosperity has bought us to acquire even more resources and subjects for an aspiring empire."
+ native_imperial_ambition_mission_desc:0 "富を確保することは、常に我々の最優先事項でなければならない。野心ある帝国のためのさらに多くの資源と国民を獲得するため、我々が経済的な繁栄により獲得した、高価な軍隊と艦隊を利用しよう。"
  native_royal_marriage_title:0 "部族の統合"
- native_royal_marriage_desc:1 "By forging marriages with other tribes, we are strengthening our position for future expansions. Expansion can start with a marriage."
+ native_royal_marriage_desc:1 "他部族と婚姻を結ぶことで、将来の拡張のため、自国の立場を強化している。拡張は、結婚から始まる。"
  native_alliances_title:0 "信頼できる同盟国"
- native_alliances_desc:0 "No country can stand alone in this world. We must build lasting relationships with other countries if we are to be able to grow and prosper long term."
+ native_alliances_desc:0 "この世界に一人で生きていける国家はない。我々が成長し、長期的に繁栄できるようにするには、他国との永続的な関係を築く必要がある。"
  native_subjects_title:0 "従属国の獲得"
- native_subjects_desc:0 "What good is power if no one recognizes it? We must acquire subject states that pay us the kind of respect one would expect from a country like [Root.GetName]."
+ native_subjects_desc:0 "誰もそれを認識しない力の何が良いのだろう？我々は[Root.GetName]のような国家に期待される、敬意を払う従属国を獲得する必要がある。"
  native_unite_home_area_title:0 "地盤地域の統合"
- native_unite_home_area_desc:0 "We cannot expect others to fear us if we are not even able to control our home area. Let's unite it!"
+ native_unite_home_area_desc:0 "自身の地盤としている地域すら支配できなければ、他国が我々を恐れることなど期待できない。団結しよう!"
  native_unite_home_region_title:0 "地盤地方の統合"
- native_unite_home_region_desc:0 "The time has come to put all our hard work to build a viable military machine to the test. We must rise to be the true hegemon of our region, respected and feared by all."
+ native_unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  native_colonize_title:0 "先住民地域の植民地化"
- native_colonize_desc:0 "There is so much land around us, with little population and infrastructure that it would be a pity not to make it ours. We shall send our people to develop it."
+ native_colonize_desc:0 "自国周辺に人も少なくインフラも乏しい地が非常に多くあり、その地を自国のものとしないのはもったいない。その地へ人を送り、開発を行うのだ。"
  native_build_army_mission_title:0 "扶養限界の確立"
  native_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  native_assemble_an_army_title:0 "軍の構築"
- native_assemble_an_army_desc:0 "Our territorial ambitions require a grand army. We must build and maintain a strong standing army that can defend and expand the lands under our rule."
+ native_assemble_an_army_desc:0 "我々の領土的野心には偉大な軍隊が必要である。我々は、我が国の統治下で国家を守り、拡大できる強力な常設軍を構築し、維持しなければならない。"
  control_unrest_title:0 "騒乱の制御"
- control_unrest_desc:0 "Our conquests have brought some instability to our lands. We have to reduce the unrest."
+ control_unrest_desc:0 "自国の征服によって、領内が不安定となった。不穏度を下げなければならない。"
  build_temples_native_title:0 "寺院の建設"
- build_temples_native_desc:0 "Our people need guidance from our spiritual leaders and what better place to have them share their wisdom than some new religious places?"
+ build_temples_native_desc:0 "国民は精神的指導者による指導を必要としている。そして、新しい神聖なる場所以上に国民に知恵を共有するための、より素晴らしい場所があるとそれは、それは一体何だろうか？"
  oceania_modernization_tag_title:0 "オセアニアの近代化"
  oceania_modernization_tag_desc:0 "Foreign colonialism threatens to wipe out our nation if we do not adapt rapidly. We must have the technology and state apparatus to challenge them."
  oceania_income_mission_title:0 "高い収入"
