--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -859,7 +859,7 @@
  PROV880:1 "オーケイ・オウィンゲ"
  PROV881:1 "Tsiahahéndé"
  PROV882:1 "Mashgaléndé"
- PROV883:1 "Tche Sha"
+ PROV883:1 "チェシャ"
  PROV884:1 "アウイア"
  PROV885:1 "Gulgahén"
  PROV886:0 "ウェーコ"
@@ -936,7 +936,7 @@
  PROV957:1 "ウィコンティス"
  PROV958:1 "Onodowaga"
  PROV959:1 "Gayogohono"
- PROV960:1 "Onondagaono"
+ PROV960:1 "オノンダガオノ"
  PROV961:1 "Onyo'taaka"
  PROV962:0 "ウナミ"
  PROV963:1 "Machkantowoon"
@@ -950,7 +950,7 @@
  PROV971:1 "Penapawsket"
  PROV972:1 "ヌーチャーヌルス"
  PROV973:1 "Skwxwu'mesh"
- PROV974:1 "Kwakwaka'wakw"
+ PROV974:1 "クヮクヮキワク"
  PROV975:0 "ツィムシアン"
  PROV976:0 "トリンギット"
  PROV977:0 "ヤクタット"
@@ -1992,7 +1992,7 @@
  PROV2016:1 "アマハミ"
  PROV2018:1 "Tsuu T'ina"
  PROV2019:1 "ニミプ"
- PROV2020:1 "Banakwut"
+ PROV2020:1 "バナクワット"
  PROV2021:0 "ミウォク"
  PROV2022:0 "ハイダ"
  PROV2023:0 "マンシー"
@@ -2570,7 +2570,7 @@
  PROV2604:0 "ダケル"
  PROV2605:0 "セクワプン"
  PROV2606:1 "Tsilhoqot'in"
- PROV2607:1 "Syilkx"
+ PROV2607:1 "サイロ―クス"
  PROV2608:0 "ロッキー山脈"
  PROV2609:0 "ニスガ"
  PROV2610:0 "ヘルツーク"
