--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -171,7 +171,7 @@
  REDUCE_INFRASTRUCTURE_TOOLTIP_MODIFIER:0 "インフラの削減によって、この州は以下の効果を失います：\n$MODIFIER$\n"
  great_project_can_be_built_instant:0 "Great Project(s) can be built"
  great_project_can_be_built_delayed:0 "The following Great Project(s) can be built:\n$LIST$"
- enemy_invasion_imminent_instant:0 "Enemy invasion imminent"
+ enemy_invasion_imminent_instant:0 "差し迫った敵の侵攻"
  enemy_invasion_imminent_delayed:0 "The following enemy navies may disembark troops into your provinces:\n$LIST$"
  homepage_button_tooltip:0 "Go to EUIV homepage"
  forum_button_tooltip:0 "Go to EUIV forums"
@@ -861,9 +861,9 @@
  PILLAGE_CAPITAL_CANNOT_NO_DEV:0 "Their capital is too poor to pillage."
  NO_FEDERATION_TEXT:0 "あなたは連邦の一員ではありません。"
  NO_CURR_ESTATES_TT:0 "You do not currently have any estates."
- FEDERATION_ADVANCEMENT_TITLE:0 "New Federation Advancement"
+ FEDERATION_ADVANCEMENT_TITLE:0 "新たな連邦の進歩"
  FEDERATION_ADVANCEMENT_SETUP:0 "When a federation you are in gains a new advancement."
- FEDERATION_ADVANCEMENT_HEADER:0 "New Federation Advancement"
+ FEDERATION_ADVANCEMENT_HEADER:0 "新たな連邦の進歩"
  FEDERATION_ADVANCEMENT_1:0 "$WHO|Y$"
  FEDERATION_ADVANCEMENT_2:0 "has chosen to add the advancement"
  FEDERATION_ADVANCEMENT_3:0 "$ADVANCEMENT|Y$"
