--- a/source/localisation/gecko_1_31_l_english.yml
+++ b/source/localisation/gecko_1_31_l_english.yml
@@ -5,5 +5,5 @@
  discoveries_revealed:0 "Discoveries Revealed"
  undisclosed_tactics:0 "Undisclosed Tactics"
  undiscovered_territory:0 "Undiscovered Territory"
- TRIBAL_DEVELOPMENT_TITLE:0 "Tribal Development"
+ TRIBAL_DEVELOPMENT_TITLE:0 "部族発展度"
  CLICK_MAP_TO_ADD_CARPETSIEGE_AREAS:0 "Click the map to add/remove areas to Carpet Siege."
