Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -12,7 +12,7 @@
  EXPLOIT_FOR_THIS:0 "開発度を利用すると、以下の効果が得られます：\n"
  CONFIRM_EXPLOIT:0 "開発度の利用を確認"
  CAN_NOT_EXPLOIT_DIP_NO_SAIL:0 "ここには水兵がいません。"
- exploit_development:0 "開発度を利用する"
+ exploit_development:0 "開発度を搾取する"
  SLACKENRECRUITSTANDS:0 "§Y募集基準の緩和§!\n"
  CONFIRM_SLACKEN:0 "募集基準の緩和を確認"
  SLACK_TEXT:0 "我々は$MP|Y$の人的資源を得ますが、我々の軍熟練度は$DROP|R$低下します。"
@@ -2310,7 +2310,7 @@
  cb_change_government_desc:0 "奴らに同じ政体を強制すべきだ！"
  claiming_the_shogunate_tooltip:0 "[new_shogunate.GetName]が幕府の新しい指導者となります。\nすべての大名の幕府への忠誠は[new_shogunate.GetName]に移動します。"
  INDEPENDENCE_WAR_NAME:0 "$FIRST$$ORDER$独立戦争"
- DEFENDER_DESC:2 "The Defender of the Faith gets Casus Belli to enforce religious unity. This will cost §Y$VALUE$§W¤. After §Y$MONTHS$§W months, countries with more prestige than the current Defender can claim the title. \nYou'll also lose if you decline a call to war from a country of your faith being attacked by infidels, or if you lose a war to infidels."
+ DEFENDER_DESC:2 "信仰の擁護者は、宗教的な統一を強制する開戦事由を取得します。これは§Y$VALUE$§W¤のコストがかかります。 §Y$MONTHS$§Wヵ月後、現在の擁護者よりも多くの威信を持つ国は、その地位を請求することができます。\nあなたはまた、不信心者に攻撃された同じ信仰の国からの参戦要請を拒否した場合や不信心者との戦争に敗北した場合、その地位を失います。"
  CARDINAL_NEW:0 "§Y有効な枢機卿§!\n我々はこの有効な枢機卿を$HOME|Y$から支配しています。それぞれの有効な枢機卿は、教皇への影響力を毎年$BENEFIT$与えてくれます。"
  NO_ACTIVE_CARDINALS:0 "将来の枢機卿に投票するのに教皇への影響力を費やすことで、将来の教皇庁内の枢機卿を支配する機会を増やします。"
  OPEN_PAPACY:0 "§Y教皇ビュー§!\nここをクリックして教皇ビューを開きます。"
