--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -335,7 +335,7 @@
  native_clan_council_reform_desc:0 "人々に信頼を広めることが重要だ。部族の利益のためならば全てを投げうつことを厭わない者によって構成された評議会から選挙を行うことで、一人が全ての権力を保持することのないようになるだろう。"
  native_martial_tradition_reform_desc:0 "野生の世界では、生存を懸けて戦わねばならない。母なる自然は寛容であると同時に危険であり、我々は野生の獣や土地を奪わんとする者から身を守る手段を学んだ。"
  native_oral_tradition_reform_desc:0 "We are our stories. What has happened in the past teaches us what may happen in the future."
- native_land_tradition_reform_desc:0 "We have always been here. We were here when the land was made and the earth was shaped. We will be here when the land is burnt and the earth vanished."
+ native_land_tradition_reform_desc:0 "我々はいつだってここにいる。地球が生まれ、大地が作られた時からここにいた。大地が燃え、地球が消滅する時もここにいるだろう。"
  native_war_band_reform_desc:0 "Feeling safe is the most important thing in life. By focusing on warfare, we will be able to ensure the welfare of our tribe."
  native_seasonal_travel_reform_desc:0 "As the world changes throughout the year, so must we. If we follow the seasons in their journey, we will find prosperity."
  native_settle_down_reform_desc:0 "Sometimes following the storm is not as important as finding shelter for it. The time has come for us to settle down and build more permanent villages."
