--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -18,7 +18,7 @@
  ANY_FEDERATION_MEMBER:0 "Any federation member:\n"
  ALL_FEDERATION_MEMBER:0 "All federation member:\n"
  FEDERATION_SIZE_LESS_THAN:0 "Less than $SIZE|Y$ federation members.\n"
- FEDERATION_SIZE_MORE_THAN:0 "$SIZE|Y$ or more federation members.\n"
+ FEDERATION_SIZE_MORE_THAN:0 "$SIZE|Y$以上の連邦加盟国がある。\n"
  ENABLE_FEDERATION_OFFENSIVE_WARS:0 "Enable Federation Offensive Wars\n"
  DISABLE_FEDERATION_OFFENSIVE_WARS:0 "Disable Federation Offensive Wars\n"
  MODIFIER_YEARLY_FEDERATION_FAVOR_GROWTH:0 "Yearly Federation Favor Growth"
@@ -26,7 +26,7 @@
  TRIBAL_DEVELOPMENT_VALUE:0 "From Tribal Development: $VAL|Y0$"
  TRIBAL_DEVELOPMENT_INCREASE_EXPLANATION:0 "Random category will grow by $VAL|+$:\n"
  PROVINCE_SETTLE_TOOLTIP_DESC:0 "Will settle our people in the province making it belong to us fully and relocate $ADM|Y$£adm£, $DIP|Y$£dip£, $MIL|Y$£mil£ Development to it.\n\n"
- SETTLE_PROVINCE_COST:0 "Costs $COST|Y$ $POWER|$ Power\n"
+ SETTLE_PROVINCE_COST:0 "$COST|Y$$POWER|$力コスト\n"
  MIGRATE_PROVINE_NOT_LAND:0 "§R$PROV|Y$ is not settleable land.\n"
  DEVASTATION_FROM_PASSIVE:0 "Natural Recovery: $VAL|-$\n"
  COHESION_FEDERATION_ADVANCEMENT:0 "§Y$NUM$ Federal Advancements§!: $VAL|+=1$\n"
@@ -63,23 +63,23 @@
  native_clan_council_reform:0 "氏族評議会"
  native_martial_tradition_reform:0 "戦争の伝統"
  native_oral_tradition_reform:0 "口頭伝承"
- native_land_tradition_reform:0 "Land Tradition"
- native_war_band_reform:0 "War Band"
- native_seasonal_travel_reform:0 "Seasonal Travel"
+ native_land_tradition_reform:0 "故郷の伝統"
+ native_war_band_reform:0 "戦争のための軍隊"
+ native_seasonal_travel_reform:0 "季節の伝統"
  native_settle_down_reform:0 "定住"
  native_codified_power_reform:0 "法典化"
  native_trading_with_foreigners_reform:0 "外国人との交易"
  native_becomes_monarchy_reform:0 "王朝の血統"
  native_becomes_republic_reform:0 "民衆による支配"
- native_becomes_theocracy_reform:0 "State of Faith"
- native_becomes_horde_reform:0 "The Great Plains calls to us"
+ native_becomes_theocracy_reform:0 "信仰の国"
+ native_becomes_horde_reform:0 "大平原が我々を呼んでいる"
  tribe_organization:0 "部族組織"
  story_tradition:0 "物語の伝統"
  legal_basis:0 "法的基盤"
  national_identity:0 "国家の独自性"
  mechanic_enable_settled_mechanics_yes:0 "Can settle development into tribl land"
  mechanic_enable_tribal_grazing_no:0 "No longer graze on land causing devastation"
- MIGRATORY_TRIBE_CULTURE_CONV:0 "§RMigratory Tribes can't convert culture.§!"
+ MIGRATORY_TRIBE_CULTURE_CONV:0 "§R移住可能部族は文化を変更できません。§!"
  vassal_overlord_title:0 "Overlord"
  cb_native_american_tribal_feud_desc:0 "We can take tribal land from our neighbours."
  MIGRATE_AT_WAR:0 "§RCan't migrate while at war!§!"
@@ -115,7 +115,7 @@
  ancestor_martial_educator_personality:0 "Martial Educator"
  ancestor_navigator_personality:0 "Navigator"
  ancestor_fierce_negotiator_personality:0 "Fierce Negotiator"
- MIGRATION_BASE_COST:0 "Base: §Y50§!\n"
+ MIGRATION_BASE_COST:0 "基本：§Y50§!\n"
  MIGRATION_MULTIPLIER:0 "Outside of Tribal Land: §Yx§!$MULT|Y$\n"
  MIGRATION_MODIFIER:0 "これはさらに以下のような補正を受けます：\n$MOD$"
  NATIVE_TRIBES_CANT_COLONISE:0 "§R先住民部族は入植できません。§!"
