--- a/source/localisation/native_rework_l_english.yml
+++ b/source/localisation/native_rework_l_english.yml
@@ -4,13 +4,13 @@
  TRIBE_ADM_DEV:0 "$VAL|2$£adm£"
  TRIBE_DIP_DEV:0 "$VAL|2$£dip£"
  TRIBE_MIL_DEV:0 "$VAL|2$£mil£"
- CAN_NOT_EXPLOIT_MIGRATORY_TRIBE:0 "§RMigratory Tribes can not exploit development.§!"
- IMPPR_MIGRATORY_TRIBE:0 "§RMigratory Tribes can not develop provinces.§!"
+ CAN_NOT_EXPLOIT_MIGRATORY_TRIBE:0 "§R移住可能部族は州を搾取できません。§!"
+ IMPPR_MIGRATORY_TRIBE:0 "§R移住可能部族は州を開発できません。§!"
  PROVINCE_TRIBAL_LAND:0 "The $OWNER|Y$ considers $PROV|Y$ part of their home."
  MIGRATE_PROVINCE_NOT_ADJECENT:0 "$PROV|Y$ is not adjecent to your tribe."
  MIGRATE_PROVINCE_SETTLED:0 "$PROV|Y$ is already settled by $OWNER|Y$."
- PROVINCE_MIGRATE_TOOLTIP:0 "Migrate to $PROV|Y$"
+ PROVINCE_MIGRATE_TOOLTIP:0 "$PROV|Y$への移住"
  MIGRATE_PROVINCE_NEED:0 "Need $COST|Y$ $POWER|$ Power to migrate.\n"
- MIGRATE_PROVINCE_COST:0 "Costs $COST|Y$ $POWER|$ Power\n"
+ MIGRATE_PROVINCE_COST:0 "$COST|Y$$POWER|$力コスト\n"
  CONFIRM_MIGRATE:0 "Confirm Migration"
  CONFIRM_MIGRATE_TEXT:0 "Do you want to migrate to $PROV|Y$?\n"
