Save/Update files [ci skip]

--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -165,7 +165,7 @@
  sultan_of_delhi_desc:0 "かつてのデリーはインド亜大陸の中心であり、我々は多くの点で彼らの伝統を受け継いでいる。\nデリーのスルタンたちの遺産を取り戻し、かつての首都ドアーブから再び亜大陸を支配しよう。"
  nepal_nation_title:0 "ネパールの統一"
  nepal_nation_desc:0 "ヒマラヤの王国の多くは誇り高く長大な歴史を持つものの、国力は貧弱で分裂状態にある。我々はヒマラヤ地域一帯を一つの王国の下統一せねばならない。団結した我らは、代々贅沢な生活に甘んじ国庫をすり減らしてきたインドの諸王などに負けはしない。彼らの軍もまた我らの鍛え上げられた軍の相手ではない。"
- timurid_claims_abandoned_tooltip:0 "§Rペルシア、ホラーサーン、コーカサス、中央アジアのすべての地方の請求権が失われます。§!"
+ timurid_claims_abandoned_tooltip:0 "§Rペルシア、ホラーサーン、コーカサス、中央アジア地方にある請求権がすべて失われます。§!"
  rajput_nation_title:0 "ラージプートの統一"
  rajput_nation_desc:0 "何世紀もの昔にムスリム勢力による侵攻があり、以降ラージプートの土地は分裂状態が続き弱体化している。我々はかつての偉大な諸国の偉大な都市を取り戻し、ラージプートの王たちを結束させなければならない！"
  deccan_nation_title:0 "デカンのスルタン"
