--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -4982,7 +4982,7 @@
  spanish_portugese_relations_title:0 "ポルトガルとの良好な関係"
  spanish_portugese_relations_desc:0 "西の隣人は同じ言語を話し、私たちの兄弟のようになるべきだ。彼らの王族は我々と深い関係を持つべきであり、我々は良い関係を築く必要がある。"
  mediterranean_christian_fleet_header:0 " "
- mediterranean_christian_fleet_title:0 "トルコ海軍支配の打破"
+ mediterranean_christian_fleet_title:0 "トルコによる海上支配の打破"
  mediterranean_christian_fleet_desc:0 "異教徒のトルコが作り上げた大規模な艦隊は、もしこれを見過ごせば、地中海を支配下に置くことになるだろう。スペインがキリスト教世界の擁護者として神が任命した役割を果たすために、より多くのガレー船を増やす必要がある。"
  no_territory_to_france_header:0 " "
  no_territory_to_france_title:0 "フランスを止めろ"
