--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -214,7 +214,7 @@
  LEDGER_TIER:0 "Tier"
  LEDGER_DESTROYED:0 "Destroyed"
  NOTBUILT:0 "Not built."
- concentrated_our_development:0 "Stole our provinces' development"
+ concentrated_our_development:0 "自国の州の開発度の略奪"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TITLE:1 "領土の開発度を集中"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT:1 "Channel development from $NAME$ for our own needs. This state will lose $DEVELOPMENT|Y$ development. Much of the development lost will end up in our capital, some will be distributed amongst our other states, some will be lost. In total, we will gain $DEVGAINED|Y$ development."
  CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT:0 "This will have the following effects on your subjects:"
@@ -277,7 +277,7 @@
  PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY:0 "$CAPITAL|Y$ is not occupied by $TAKER|Y$ or one of its subjects."
  PILLAGE_CAPITAL_CANNOT_NO_VALID_PROVINCES:0 "All provinces in the capital area have been taken."
  NUM_OF_TIMES_PILLAGED_CAPITAL_STATE:1 "Number of times used 'Pillage capital state' in a peace treaty"
- NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT:0 "Number of times concentrated development"
+ NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT:0 "開発の集中の実施回数"
  COUNTRY_HAS_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has pillaged the capital state of $OTHERCOUNTRY$.\n"
  COUNTRY_HAS_NOT_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has not pillaged the capital state of $OTHERCOUNTRY$.\n"
  CANNOT_EXTEND_REGENCY_SUBJECT:0 "Cannot extend your overlord's regency!"
